# safe-netrc

./: .gitattributes  .gitlab-ci.yml  CHANGES.md  MANIFEST.in  setup.cfg
safe_netrc/: __init__.py  _version.py
