[aliases]
test=pytest

[bdist_wheel]
universal=1

[coverage:run]
source = safe_netrc
omit =
    safe_netrc/tests/*

[flake8]
exclude =
    safe_netrc/_version.py
    versioneer.py
ignore = D100,D103,D104,D107,D205,D400

[metadata]
name = safe-netrc
license = GPL-2+
license_file = LICENSE.md
author = Leo Singer
author_email = leo.singer@ligo.org
description = Safe netrc file parser
long_description = file:README.md
long_description_content_type = text/markdown
url = https://git.ligo.org/emfollow/safe-netrc
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet
    Topic :: Security
project_urls =
    Bug Tracker = https://git.ligo.org/emfollow/safe-netrc/issues
    Source Code = https://git.ligo.org/emfollow/safe-netrc
tests_require =
    pytest

[options]
packages = find:

[versioneer]
VCS = git
versionfile_build = safe_netrc/_version.py
versionfile_source = safe_netrc/_version.py
tag_prefix = v
parentdir_prefix = safe-netrc-
